# Voice

./: ANDROID_SUPPORT.md  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: README.md  ci.yml  publish.yml  release.yml
lang/: en-US.yml  zh-CN.yml
src/: lib.rs  main.rs
src/common/: config.rs  error.rs  mod.rs
src/stt/: mod.rs  transcription.rs  whisper_engine.rs  whisper_worker.rs
src/tts/: azure.rs  kokoro_tts.rs  kokoro_tts_worker.rs  kokoro_voice.rs  mod.rs  msedge.rs  qwen.rs  synthesis.rs  tiktok.rs
